feat: Add custom image for the game

--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,6 @@
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display" rel="stylesheet">
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/united/bootstrap.min.css"> -->
 	<link rel="stylesheet" href="assets/css/style.css">
 
 </head>
@@ -22,11 +21,11 @@
   					<div class="panel-body">
   						<div class="row">
   							<div class="col-lg-6">
-  								<img class="img-responsive" src="assets/images/hangman.png">
+  								<img class="img-responsive" src="assets/images/hangmanImg.jpg">
   							</div>
-  							<div class="col-lg-6">	
-  								<canvas id="imgCanvas" width="250" height="400"></canvas>
-  								<p id="userMessage" class="messageText"></p>
+  							<div class="col-md-offset-1 col-lg-5">
+  								<canvas id="imgCanvas" width="200" height="350"></canvas>
+  								<p id="userMessage" class="messageText">Let's play!!!</p>
   							</div>
   						</div>	
   					</div>
