fix: Add comments and separate script files from template

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display" rel="stylesheet">
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/united/bootstrap.min.css"> -->
 	<link rel="stylesheet" href="assets/css/style.css">
 
 </head>
@@ -20,9 +19,19 @@
   			<div class="col-lg-6">
   				<div class="panel panel-default">
   					<div class="panel-body">
-  						<img class="img-responsive" src="assets/images/hangman.png">
-  						<span id="userMessage" class="messageText"></span>
-    				</div>
+  						<div class="row">
+  							<div class="col-lg-6">
+  								<figure>
+	  								<img class="img-responsive" src="assets/images/hangmanImg.jpg">
+	  								<figcaption>Artist: Anya Srinivasan</figcaption>
+  								</figure>
+  							</div>
+  							<div class="col-md-offset-1 col-lg-5">
+  								<canvas id="imgCanvas" width="200" height="350"></canvas>
+  								<p id="userMessage" class="messageText"></p>
+  							</div>
+  						</div>	
+  					</div>
     				<div class="panel-footer" id="audioFrame">
     					<audio controls id="h2O">
     						<source src="assets/audio/djlang59_-_Drops_of_H2O_(_The_Filtered_Water_Treatment_).mp3" type="audio/mpeg">
@@ -38,20 +47,21 @@
 						<h4>Wins:</h4>
 						<p id="totalWins"></p>
 						<h4>Current Word</h4>
-						<!-- <p><span id="currentWord" class="guessWord"></span></p> -->
 						<p id="currentWord" class="guessWord"></p>
 						<h4>Number of guesses remaining:</h4>
 						<p id="numOfGuesses"></p>
 						<h4>Letters already guessed</h4>
 						<div class="well" id="lettersGuessed"></div>
-						<span id="dispMessage"></span>
-  					</div>
+						<button id="nextWord" class="generateWord">Next Word</button>
+						<p id="dispMessage"></p>
+					</div>
 				</div>
 			</div>
   		</div>
 
 	 </div>
-	<script type="text/javascript">
+	 <script src="assets/javascript/game.js"></script>
+	<!-- <script type="text/javascript">
 		//  access the HTML elements using the id of the elements
 		var curWord = document.getElementById("currentWord");
 		var lettersUsed = document.getElementById("lettersGuessed");
@@ -60,16 +70,30 @@
 		var displayMessage = document.getElementById("dispMessage");
 		var playAudio = document.getElementById("audioFrame");
 		var audioFile = document.getElementById("h2O");
+		var pickWord = document.getElementById("nextWord");
+		
+		// Draw the heading on the canvas
+		var drawCanvas = document.getElementById("imgCanvas");
+		if (drawCanvas.getContext) {
+				var ctx = drawCanvas.getContext('2d');
+				// Create gradient
+				var grd = ctx.createLinearGradient(0,0,300,0);
+				grd.addColorStop(0,"red");
+				grd.addColorStop(1,"white");
 
-		// declaring variables for wins, remaining guesses
+				ctx.font = "20px Arial";
+				ctx.fillStyle = grd;
+				ctx.fillText("Lets Play!!!", 50, 20);
+		}	
+		
+		// declaring variables for wins, remaining guesses, user choice
 		var wins = 0;
-		// var guessAllowed = 12;
-		// var totalGuess = 0;
-		var remainingGuess = 0;
+		var remainingGuess = 12;
 		var wordChoice;
 		var pick;
 		var pos;
 		var userChoice;
+		var stage = 0;
 		
 		countGuess.innerHTML = "<strong>"+remainingGuess+"</strong>";
 		
@@ -81,20 +105,13 @@
 		// this function uses the Math.random function to pick a random word from the word list array,
 		// loop through the selected word and dynamically create the blank spaces on the document equal to the word length.
 		function pickAWord() {
-			lettersGuessed.length = 0;
-			selectedWord.length = 0;
-			lettersUsed.innerHTML = "";
+			resetVariables();
 			pick = Math.floor(Math.random() * wordList.length);
 			wordChoice = wordList[pick].toLowerCase();
-			remainingGuess = wordChoice.length + 5;
-			//console.log(wordChoice.length);
-			//remainingGuess = 12;
 			countGuess.innerHTML = "<strong>"+remainingGuess+"</strong>";
 			pos = wordList.indexOf(wordList[pick]);
 			wordList.splice(pos, 1);
 			for(var i=0; i<wordChoice.length;i++) {
-				//curWord.innerHTML += "<span id=pos"+i+">-</span>";
-				//curWord.innerHTML +=	
 				selectedWord.push("-");
 			}
 			curWord.innerHTML = "<span>" + selectedWord + "</span>";
@@ -102,25 +119,31 @@
 
 		// The onkeyup function captures the user input
 		document.onkeyup = function(event) {
-			audioFile.pause();
-			displayMessage.innerHTML = "";
-			gameMessage.innerHTML = "";
+			//audioFile.pause();
 			userChoice = event.key;
 			console.log(wordChoice);
+			hangman();
 			if(lettersGuessed.indexOf(userChoice) === -1) {
 	      		lettersGuessed.push(userChoice.toLowerCase());
 	      		lettersUsed.innerHTML = "<strong>"+lettersGuessed+"<strong>";
 	      		checkUserInput(userChoice);
-	      		remainingGuess--;
+	      		if(remainingGuess > 0 && selectedWord.join("") !== wordChoice) {
+	      			remainingGuess--;
+	      		}
 	      		countGuess.innerHTML = "<strong>"+remainingGuess+"</strong>";
 	      		if(remainingGuess === 0 && selectedWord.join("") !== wordChoice) { 
 	      			gameMessage.innerHTML = "<strong>Time up! Try Again.</strong>";
-	      			pickAWord();
-		    	}
+	      			//pickAWord();
+	      			resetVariables();
+	      			audioFile.src = "assets/audio/crazy-making-loopy-creature.wav";
+	      			audioFile.type = "audio/wav"
+	      			audioFile.play();
+	      		}
 	      	}else {
 	      		displayMessage.innerHTML = "<strong>Letter already input before. Choose another letter.</strong>";	
-	      	}	
-      	}	
+	       	}	
+
+	    }	
 
       	function checkUserInput(userInput) {
       		for(var j=0; j<wordChoice.length; j++) {
@@ -131,12 +154,93 @@
       		curWord.innerHTML = "<span>" + selectedWord + "</span>";
       		if(selectedWord.join("") === wordChoice) {
       			gameMessage.innerHTML = "<strong>You got it!</strong>";
+      			audioFile.src = "assets/audio/djlang59_-_Drops_of_H2O_(_The_Filtered_Water_Treatment_).mp3";
+      			audioFile.type = "mp3";
       			audioFile.play();
-      			pickAWord();
       		}
       	}
 
-      	
-	</script>
+      	pickWord.addEventListener('click', function() {
+      		gameMessage.innerHTML = "";
+      		audioFile.pause();
+      		pickAWord();
+      	});
+
+      	// Function to reset all variables to initial state
+      	function resetVariables() {
+       		lettersGuessed.length = 0;
+		 	selectedWord.length = 0;
+		 	lettersUsed.innerHTML = "";
+		 	displayMessage.innerHTML = "";
+			remainingGuess = 12;
+			stage = 0;
+			ctx.clearRect(0, 0, drawCanvas.width, drawCanvas.height);
+			ctx.fillText("Lets Play!!!", 50, 20);
+			drawPole();
+		}
+
+		 function hangman() {
+		 	if(wordChoice.indexOf(userChoice) === -1 && lettersGuessed.indexOf(userChoice) === -1) {
+		 		draw(stage);
+		 		stage++;
+		 	}
+		 }
+
+		 // Function draws the hangman image in steps each time user makes a wrong guess
+		 function draw(step) {
+  			ctx.beginPath();
+  			if(step === 0) {
+    			ctx.arc(110, 110, 50, 0, Math.PI * 2, true); // Outer circle
+    			ctx.stroke();
+    		} else if(step === 1) {	
+				ctx.moveTo(145, 110);
+				ctx.arc(110, 110, 35, 0, Math.PI, false);  // Mouth (clockwise)
+				ctx.stroke();
+			} else if(step === 2) {
+				ctx.moveTo(100, 100);
+				ctx.arc(95, 100, 5, 0, Math.PI * 2, true);  // Left eye
+				ctx.stroke();
+			}else if(step === 3) {	
+				ctx.moveTo(130, 100);
+				ctx.arc(125, 100, 5, 0, Math.PI * 2, true);  // Right eye
+				ctx.stroke();
+			}else if(step === 4) {
+				ctx.moveTo(110, 160);
+    			ctx.lineTo(110, 300);
+    			ctx.stroke();
+			} else if(step === 5) {
+				ctx.moveTo(110, 180);
+    			ctx.lineTo(60,200);
+    			ctx.stroke();
+			}else if(step === 6) {
+				ctx.moveTo(110, 180);
+    			ctx.lineTo(160,200);
+    			ctx.stroke();
+			}else if(step === 7) {
+				ctx.moveTo(110, 300);
+    			ctx.lineTo(60,350);
+    			ctx.stroke();
+			}else if(step === 8) {
+				ctx.moveTo(110, 300);
+    			ctx.lineTo(160,350);
+    			ctx.stroke();
+    		}
+		}		
+
+		function drawPole() {
+				ctx.beginPath();
+			    ctx.moveTo(40,350);
+			    ctx.lineTo(40,30);
+			    ctx.lineTo(175,30);
+			    ctx.moveTo(110,30);
+			    ctx.lineTo(110,60);
+			    ctx.stroke();
+			    ctx.closePath();
+		}
+		
+	</script> -->
 </body>
 </html>
+
+<!-- Issue: Clear the canvas for next word
+convert all char to lower case -->
