--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
   			<p><span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span></p>
   		</div>
   		<div class="row">
-  			<div class="col-lg-6">
+  			<div class="col-md-6 col-sm-12">
   				<div class="panel panel-default">
   					<div class="panel-body">
   						<div class="row">
-  							<div class="col-lg-6">
+  							<div class="col-md-6 col-sm-6">
   								<figure>
 	  								<img class="img-responsive" src="assets/images/hangmanImg.jpg">
 	  								<figcaption>Artist: Anya Srinivasan</figcaption>
   								</figure>
   							</div>
-  							<div class="col-md-offset-1 col-lg-5">
+  							<div class="col-md-offset-1 col-md-5 col-sm-6">
   								<canvas id="imgCanvas" width="200" height="350"></canvas>
   								<p id="userMessage" class="messageText"></p>
   							</div>
@@ -40,7 +40,7 @@
     				</div>
 				</div>
   			</div>
-  			<div class="text-center col-lg-6">
+  			<div class="text-center col-md-6 col-sm-12">
 				<div class="panel panel-default">
   					<div class="panel-body">
     					<h3>Press any key to get started!</h3>
